1-5新增git.ignore，讓git不要追蹤node_module資料夾，並且使用第三方套件

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/RyanStone2640/NodeJs/issues"
   },
-  "homepage": "https://github.com/RyanStone2640/NodeJs#readme"
+  "homepage": "https://github.com/RyanStone2640/NodeJs#readme",
+  "dependencies": {
+    "cowsay": "^1.5.0"
+  }
 }
